--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -22,11 +22,11 @@
     "@babel/preset-react": "^7.13.13"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "semantic-ui-react": "^2.0.3",
-    "immutable": "^4.0.0-rc.12"
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "semantic-ui-react": "*",
+    "immutable": "*"
   },
   "scripts": {
     "dist": "rm -rf dist && mkdir dist &&  babel src/ -d dist --copy-files && npm link",
