--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -11,11 +11,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
@@ -34,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "watch ' babel src/ -d dist ' ./src"
   },
   "eslintConfig": {
     "extends": [
