--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -10,19 +10,17 @@
     "README.md"
   ],
   "license": "MIT",
-  "dependencies": {
-    "react-scripts": "^5.0.0"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/preset-react": "^7.13.13"
+    "@babel/cli": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-redux": "*",
-    "semantic-ui-react": "*",
-    "immutable": "*"
+    "immutable": "^4.3.7",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^9.1.2",
+    "semantic-ui-react": "^2.1.5 || ^3.0.0-beta.2"
   },
   "scripts": {
     "dist": "rm -rf dist && mkdir dist &&  babel src/ -d dist --copy-files && npm link",
@@ -62,5 +60,15 @@
   },
   "keywords": [
     "react"
-  ]
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./dist": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  }
 }
