--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -23,6 +23,8 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.25.9",
     "@babel/preset-react": "^7.25.7",
+    "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
+    "react-compiler-runtime": "^19.0.0-beta-6fc168f-20241025",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
@@ -76,6 +78,12 @@
       ]
     ],
     "plugins": [
+      [
+        "babel-plugin-react-compiler",
+        {
+          "target": "18"
+        }
+      ],
       "@babel/plugin-transform-runtime",
       "@babel/plugin-external-helpers"
     ]
