--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
     "@babel/preset-react": "^7.13.13"
   },
   "peerDependencies": {
