--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.7",
     "@babel/plugin-external-helpers": "^7.25.9",
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.25.9",
