--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -8,6 +8,8 @@
     "dist",
     "README.md"
   ],
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "immutable": "^4.3.7",
@@ -15,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-intl": "^6.8.0",
     "react-redux": "^9.1.2",
-    "semantic-ui-react": "^3.0.0-beta.2"
+    "semantic-ui-react": "^3.0.0-beta.2",
+    "react-compiler-runtime": "^19.0.0-beta-6fc168f-20241025"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.7",
@@ -24,7 +27,6 @@
     "@babel/preset-env": "^7.25.9",
     "@babel/preset-react": "^7.25.7",
     "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
-    "react-compiler-runtime": "^19.0.0-beta-6fc168f-20241025",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
