--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -8,25 +8,22 @@
     "dist",
     "README.md"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "dependencies": {
     "immutable": "^4.3.7",
-    "react": "^18.3.1",
+    "react": "^18.3.1", 
     "react-dom": "^18.3.1",
     "react-intl": "^6.8.0",
     "react-redux": "^9.1.2",
-    "semantic-ui-react": "^3.0.0-beta.2",
-    "react-compiler-runtime": "^19.0.0-beta-6fc168f-20241025"
+    "semantic-ui-react": "^3.0.0-beta.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.7",
-    "@babel/core": "^7.25.7",
-    "@babel/plugin-transform-runtime": "^7.25.9",
-    "@babel/preset-env": "^7.25.9",
-    "@babel/preset-react": "^7.25.7",
-    "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
+    "@types/node": "^22.15.18",
+    "typescript": "^5.8.3",
+    "unbuild": "^3.5.0",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
@@ -38,9 +35,9 @@
     "semantic-ui-react": "^3.0.0-beta.2"
   },
   "scripts": {
-    "dist": "rm -rf dist && mkdir dist &&  babel src/ -d dist --copy-files && npm link",
-    "dev": "rm -rf dist && mkdir dist &&  babel src/ -d dist --copy-files --source-maps --watch",
-    "watch": "watch ' babel src/ -d dist ' ./src"
+    "dist": "unbuild&& npm link",
+    "dev": "unbuild --watch",
+    "build": "unbuild"
   },
   "eslintConfig": {
     "extends": [
@@ -48,54 +45,23 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "modules": false
-        }
-      ],
-      [
-        "@babel/preset-react",
-        {
-          "runtime": "automatic"
-        }
-      ]
-    ],
-    "plugins": [
-      [
-        "babel-plugin-react-compiler",
-        {
-          "target": "18"
-        }
-      ],
-      "@babel/plugin-transform-runtime"
-    ]
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devgateway/dg-wp-react.git"
+    "url": "git+https://github.com/devgateway/dg-wp-react.git",
+    "directory": "wp-react-lib"
   },
   "keywords": [
-    "react"
+    "react",
+    "dg-data-viz",
+    "data-viz",
+    "wp-react-lib",
+    "wordpress"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/index.d.ts"
     }
   }
 }
