--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -14,16 +14,20 @@
   "license": "MIT",
   "dependencies": {
     "immutable": "^4.3.7",
-    "react": "^18.3.1", 
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^6.8.0",
     "react-redux": "^9.1.2",
     "semantic-ui-react": "^3.0.0-beta.2"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.19",
+    "@vitejs/plugin-react": "^4.4.1",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "typescript": "^5.8.3",
-    "unbuild": "^3.5.0",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-tsconfig-paths": "^5.1.4",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
@@ -35,9 +39,9 @@
     "semantic-ui-react": "^3.0.0-beta.2"
   },
   "scripts": {
-    "dist": "unbuild&& npm link",
-    "dev": "unbuild --watch",
-    "build": "unbuild"
+    "dist": "vite build && npm link",
+    "dev": "vite build --watch",
+    "build": "vite build"
   },
   "eslintConfig": {
     "extends": [
@@ -59,9 +63,10 @@
   ],
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/esm/index.mjs",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/cjs/index.js"
     }
-  }
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
