--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -9,8 +9,8 @@
     "README.md"
   ],
   "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.mjs",
-  "types": "dist/index.d.ts",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "license": "MIT",
   "dependencies": {
     "immutable": "^4.3.7",
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.19",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^4.4.1",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "typescript": "^5.8.3",
@@ -63,8 +65,8 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/esm/index.mjs",
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     }
   }
