--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -21,6 +21,7 @@
     "semantic-ui-react": "^3.0.0-beta.2"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.19",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
