chore(DVIZ-42): set default working directory in github actions

--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -45,13 +45,8 @@
     "dist": "vite build && npm link",
     "dev": "vite build --watch",
     "build": "vite build",
-    "typecheck": "tsc --noEmit"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "typecheck": "tsc --noEmit",
+    "version": "changeset version"
   },
   "repository": {
     "type": "git",
