--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run build
 
       - name: Create Release
-        uses: changesets/action@v1
+        uses: changesets/action@001cd79f0a536e733315164543a727bdf2d70aff
         id: release
         with:
           version: npm run version
