--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -29,8 +29,7 @@
     "typescript": "^5.9.3",
     "vite": "^6.3.6",
     "vite-plugin-dts": "^4.5.4",
-    "vite-tsconfig-paths": "^5.1.4",
-    "watch": "^1.0.2"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "immutable": "^5.1.3",
