updating npm settings

--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -74,6 +74,10 @@
       "types": "./dist/types/hooks/index.d.ts",
       "import": "./dist/esm/hooks/index.js",
       "require": "./dist/cjs/hooks/index.js"
+    },
+    "publishConfig": {
+      "access": "public",
+      "provenance": false
     }
   }
 }
