chore: fix npm publishing

--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -58,6 +58,10 @@
     "wp-react-lib",
     "wordpress"
   ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -73,11 +77,6 @@
       "types": "./dist/types/hooks/index.d.ts",
       "import": "./dist/esm/hooks/index.js",
       "require": "./dist/cjs/hooks/index.js"
-    },
-    "publishConfig": {
-      "access": "public",
-      "provenance": false
-
     }
   }
 }
