--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -27,5 +27,5 @@ runs:
 
     - name: Install dependencies
       if: steps.modules-cache.outputs.cache-hit != 'true'
-      run: npm install --frozen-lockfile
+      run: npm ci
       shell: bash
