--- a/wp-react-lib/package.json
+++ b/wp-react-lib/package.json
@@ -60,7 +60,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "provenance": true
+    "provenance": false
   },
   "exports": {
     ".": {
